# maptogo

./: .gitignore  ApiRequest.py  Config.py.template  Dockerfile  EnrichmentDataStructure.py  LICENSE  README.md  analysis.py  api_request_example.sh  app.py  organisms.py  pyproject.toml  requirements.txt  test.py  test_api.sh
.github/workflows/: docker-build.yml
Data/: examples.xlsx
Data/ExampleSource/: AOValves.xlsx  Contraceptives.xlsx  MK.xlsx  Mouse.xlsx  extract_regulated_lipids.py
Data/Source/: create_ontology.py  download-databases.sh  makefile
Data/Source/Data/: ChEBI_chebi_to_lipid.csv  LipidMaps_chebi_to_lipid.csv  SwissLipids_chebi_to_lipid.csv  chebi_to_lipid.csv
Data/Source/Scripts/: CHEBI_synonyms.py  chebi.py  chebi_to_pathway.py  goa_uniprot.py  hgnc_to_mondo.py  pathbank_to_uniprot.py  rhea_to_chebi.py  uniprot_to_doid.py  uniprot_to_go.py
Test/: test_data.csv
assets/: scripts.js  style.css
examples/: api_request.sh  open_maptogo_and_send_data.cpp  open_maptogo_and_send_data.py  use_MAPtoGO_library.py
src/: fisher_exact.cpp  makefile
