[project]
name = "maptogo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.17.1",
    "dash-ag-grid==2.4.0",
    "dash-iconify==0.1.2",
    "dash-mantine-components==0.12.1",
    "flask-restx==1.3.2",
    "freetype-py==2.5.1",
    "gevent>=25.9.1",
    "gunicorn>=25.1.0",
    "logging==0.4.9.6",
    "openpyxl==3.1.5",
    "pathlib==1.0.1",
    "plotly==5.14.1",
    "pygoslin==2.1.6",
    "scipy==1.16.2",
    "statsmodels==0.14.5",
]
